WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94869
REGRESSION (
r124815
): PDF in frame does not display any more
https://bugs.webkit.org/show_bug.cgi?id=94869
Summary
REGRESSION (r124815): PDF in frame does not display any more
Brady Eidson
Reported
2012-08-23 15:40:42 PDT
REGRESSION (
r124815
): PDF in frame does not display any more. BuiltinPDFView needs to notify the plugincontroller that it initialized. In radar as <
rdar://problem/12063306
>
Attachments
Patch
(1.31 KB, patch)
2012-08-23 15:42 PDT
,
Brady Eidson
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-08-23 15:42:17 PDT
Created
attachment 160267
[details]
Patch
Alexey Proskuryakov
Comment 2
2012-08-23 15:44:43 PDT
Comment on
attachment 160267
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160267&action=review
No test?.. <:-|
> Source/WebKit2/WebProcess/Plugins/PDF/BuiltInPDFView.mm:345 > + controller()->didInitializePlugin();
I'm wondering if this should be made async to match regular code path. Probably not.
Brady Eidson
Comment 3
2012-08-23 15:47:40 PDT
(In reply to
comment #2
)
> (From update of
attachment 160267
[details]
) > > > Source/WebKit2/WebProcess/Plugins/PDF/BuiltInPDFView.mm:345 > > + controller()->didInitializePlugin(); > > I'm wondering if this should be made async to match regular code path. Probably not.
Probably not indeed. The regular synchronous code path for netscape plugins already has to do this, for example. Thanks for the review!
Brady Eidson
Comment 4
2012-08-23 15:49:21 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 160267
[details]
[details]) > > > > > Source/WebKit2/WebProcess/Plugins/PDF/BuiltInPDFView.mm:345 > > > + controller()->didInitializePlugin(); > > > > I'm wondering if this should be made async to match regular code path. Probably not. >
And also, the async design is largely centered around out-of-process plugins. We'll need BuiltinPDFView to be out of process first. :)
Brady Eidson
Comment 5
2012-08-23 15:50:13 PDT
http://trac.webkit.org/changeset/126490
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug